[project]
name = "ss-scrape-remake"
version = "0.1.0"
description = ""
authors = [
    {name = "Ucis",email = "98166442+Ucis-cmd@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
